codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Implement this plan?

› 1. Yes, implement in Execute mode  Switch to Execute and execute the plan.
  2. Yes, implement in Default mode  Switch to Default and start coding.
  3. No, stay in Plan mode           Continue planning with the model.

  Press enter to confirm or esc to go back
